Lists and multi-user prep implementation (#11)
* Start of Take2.

* Fix reordering.

* Cleanup
