# apps/api/openapi.json
@@ -54,6 +54,20 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "folderId": {
+                    "oneOf": [
+                      {
+                        "type": "string",
+                        "format": "uuid"
+                      },
+                      {
+                        "type": "string",
+                        "enum": [
+                          "inbox"
+                        ]
+                      }
+                    ]
+                  },
                   "isFavorite": {
                     "type": "boolean"
                   },
@@ -69,6 +83,7 @@
                   }
                 },
                 "required": [
+                  "folderId",
                   "isFavorite",
                   "myDay",
                   "title"
@@ -272,6 +287,155 @@
           }
         }
       }
+    },
+    "/me": {
+      "get": {
+        "parameters": [
+          {
+            "name": "x-user-id",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "NonEmptyString",
+              "minLength": 1
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "lists": {
+                      "type": "array",
+                      "items": {
+                        "oneOf": [
+                          {
+                            "type": "object",
+                            "properties": {
+                              "_tag": {
+                                "type": "string",
+                                "enum": [
+                                  "TaskListGroup"
+                                ]
+                              },
+                              "id": {
+                                "oneOf": [
+                                  {
+                                    "type": "string",
+                                    "format": "uuid"
+                                  },
+                                  {
+                                    "type": "string",
+                                    "enum": [
+                                      "inbox"
+                                    ]
+                                  }
+                                ]
+                              },
+                              "title": {
+                                "type": "string",
+                                "title": "NonEmptyString",
+                                "minLength": 1
+                              }
+                            },
+                            "required": [
+                              "_tag",
+                              "id",
+                              "title"
+                            ]
+                          },
+                          {
+                            "allOf": [
+                              {
+                                "type": "object",
+                                "properties": {
+                                  "id": {
+                                    "oneOf": [
+                                      {
+                                        "type": "string",
+                                        "format": "uuid"
+                                      },
+                                      {
+                                        "type": "string",
+                                        "enum": [
+                                          "inbox"
+                                        ]
+                                      }
+                                    ]
+                                  }
+                                },
+                                "required": [
+                                  "id"
+                                ]
+                              },
+                              {
+                                "type": "object",
+                                "properties": {
+                                  "_tag": {
+                                    "type": "string",
+                                    "enum": [
+                                      "TaskList"
+                                    ]
+                                  },
+                                  "parentListId": {
+                                    "oneOf": [
+                                      {
+                                        "type": "string",
+                                        "format": "uuid"
+                                      },
+                                      {
+                                        "type": "string",
+                                        "enum": [
+                                          "inbox"
+                                        ]
+                                      }
+                                    ],
+                                    "nullable": true
+                                  },
+                                  "title": {
+                                    "type": "string",
+                                    "title": "NonEmptyString",
+                                    "minLength": 1
+                                  }
+                                },
+                                "required": [
+                                  "_tag",
+                                  "parentListId",
+                                  "title"
+                                ]
+                              }
+                            ]
+                          }
+                        ],
+                        "discriminator": {
+                          "propertyName": "_tag"
+                        }
+                      }
+                    },
+                    "name": {
+                      "type": "string",
+                      "title": "NonEmptyString",
+                      "minLength": 1
+                    }
+                  },
+                  "required": [
+                    "lists",
+                    "name"
+                  ]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "ValidationError"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -312,6 +476,11 @@
             "type": "string",
             "format": "date-time"
           },
+          "createdBy": {
+            "type": "number",
+            "title": "PositiveInt",
+            "minimum": 0
+          },
           "due": {
             "type": "string",
             "format": "date-time",
@@ -323,6 +492,20 @@
           },
           "isFavorite": {
             "type": "boolean"
+          },
+          "listId": {
+            "oneOf": [
+              {
+                "type": "string",
+                "format": "uuid"
+              },
+              {
+                "type": "string",
+                "enum": [
+                  "inbox"
+                ]
+              }
+            ]
           },
           "myDay": {
             "type": "string",
@@ -360,9 +543,11 @@
           "assignedTo",
           "completed",
           "createdAt",
+          "createdBy",
           "due",
           "id",
           "isFavorite",
+          "listId",
           "myDay",
           "note",
           "reminder",
